plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.11'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.mbronshteyn'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter') {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'io.beanmapper:beanmapper-spring-boot-starter:4.1.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'ch.qos.logback:logback-classic'
    implementation 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    runtimeOnly 'com.h2database:h2'

    // rest assured dependency
    testImplementation 'io.rest-assured:rest-assured:4.3.1'
    testImplementation 'io.rest-assured:json-path:4.3.1'
    testImplementation 'io.rest-assured:json-schema-validator:4.3.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.2.0'

    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootBuildImage{
    imageName='usermanagement'
}

tasks.named('test') {
    useJUnitPlatform()
}
